@@ -2,7 +2,9 @@ package com.hyun3.controller;
 
 
 import com.hyun3.dao.map.MapDAO;
+import com.hyun3.domain.map_api.BlogDTO;
 import com.hyun3.domain.map_api.MapDTO;
+import com.hyun3.domain.map_api.StImgDTO;
 import com.hyun3.mvc.annotation.Controller;
 import com.hyun3.mvc.annotation.RequestMapping;
 import com.hyun3.mvc.view.ModelAndView;
@@ -17,15 +19,19 @@ import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 import java.util.*;
 
 import static com.hyun3.mvc.annotation.RequestMethod.GET;
 import static com.hyun3.mvc.annotation.RequestMethod.POST;
 import static com.hyun3.util.ApiKey.*;
+import static org.apache.commons.lang3.StringEscapeUtils.unescapeHtml4;
 
 @Controller
 public class MapController {
+
+    private MapDAO dao = null;
 
     @RequestMapping(value = "/map", method = GET)
     public ModelAndView mapMain(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
@@ -56,7 +62,7 @@ public class MapController {
     @RequestMapping(value = "/map/db", method = POST)
     public void inDB(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException, SQLException {
 
-        MapDAO dao = new MapDAO();
+        dao = new MapDAO();
         List<MapDTO> mapDao = dao.selectStoreData();
 
         StringBuilder jsonBuffer = new StringBuilder();
@@ -91,39 +97,78 @@ public class MapController {
             }
         }
 
-
-        //TODO DB에 저장
         dao.inputStoreData(list);
-        System.out.println("DB 저장 완료");
-
     }
 
 
     @RequestMapping(value = "/map/naverBlog", method = GET)
-    public void naverBlog(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+    public void naverBlog(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException, SQLException {
+        dao = new MapDAO();
         String clientId = NAVER_CLIENT_ID;
-        String clientSecret = NAVER_MAP_SECRET_KEY;
-       
-        int startNum = 0;
+        String clientSecret = NAVER_SECRET_KEY;
 
-        String text;
-        try {
-            String searchText = req.getParameter("query");
-            text = URLEncoder.encode(searchText, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("검색어 인코딩 실패", e);
+        List<MapDTO> mapDao = dao.testData();
+
+        for (MapDTO mapDTO : mapDao) {
+            String text = URLEncoder.encode(mapDTO.getStName(), StandardCharsets.UTF_8);
+            int startNum = 1;
+
+
+
+            for (int i = 0; i <= 5; i++) {
+                String apiURL = "https://openapi.naver.com/v1/search/blog.json?query=" + text + "&display=100&start=" + startNum;
+
+                Map<String, String> requestHeaders = new HashMap<>();
+                requestHeaders.put("X-Naver-Client-Id", clientId);
+                requestHeaders.put("X-Naver-Client-Secret", clientSecret);
+                String responseBody = get(apiURL, requestHeaders);
+
+
+
+                JSONObject jsonObject = new JSONObject(responseBody);
+
+                JSONArray items = jsonObject.getJSONArray("items");
+
+                List<BlogDTO> list = dao.selectBlogData(mapDTO.getStId());
+
+                Set<BlogDTO> setDto = new TreeSet<>(list);
+
+
+                List<BlogDTO> dto = blogMethod(items, setDto);
+
+                MapDAO dao = new MapDAO();
+                System.out.println(mapDTO.getStName() + " : " + dto.size());
+
+                if (dto.isEmpty()) {
+                    continue;
+                }
+
+                dao.inputBlog(dto, mapDTO.getStId());
+                startNum += 100;
+            }
         }
 
-        String apiURL = "https://openapi.naver.com/v1/search/blog.json?query=" + text + "&display=100";
-        // 결과
+    }
 
-        Map<String, String> requestHeaders = new HashMap<>();
-        requestHeaders.put("X-Naver-Client-Id", clientId);
-        requestHeaders.put("X-Naver-Client-Secret", clientSecret);
-        String responseBody = get(apiURL, requestHeaders);
-
-        System.out.println(responseBody);
-
+    private List<BlogDTO> blogMethod(JSONArray items, Set<BlogDTO> setDto) {
+        List<BlogDTO> dto = new ArrayList<>();
+        for (int i = 0; i < items.length(); i++) {
+            JSONObject item = items.getJSONObject(i);
+            String title = unescapeHtml4(item.getString("title").replaceAll("<b>", "").replaceAll("</b>", ""));
+            String content = unescapeHtml4(item.getString("description").replaceAll("<b>", "").replaceAll("</b>", ""));
+            if (title.contains("홍대") || content.contains("홍대")) {
+                BlogDTO blogDTO = new BlogDTO();
+                blogDTO.setBlogTitle(title);
+                blogDTO.setBlogContent(content);
+                blogDTO.setBlogName(item.getString("bloggername"));
+                blogDTO.setBlogUrl(item.getString("link"));
+                blogDTO.setBlogDate(item.getString("postdate"));
+                if (setDto.add(blogDTO)) {
+                    dto.add(blogDTO);
+                }
+            }
+        }
+        return dto;
     }
 
     private static String get(String apiUrl, Map<String, String> requestHeaders) {
@@ -135,9 +180,9 @@ public class MapController {
             }
 
             int responseCode = con.getResponseCode();
-            if (responseCode == HttpURLConnection.HTTP_OK) { // 정상 호출
+            if (responseCode == HttpURLConnection.HTTP_OK) {
                 return readBody(con.getInputStream());
-            } else { // 오류 발생
+            } else {
                 return readBody(con.getErrorStream());
             }
         } catch (IOException e) {
@@ -175,8 +220,6 @@ public class MapController {
         }
 
 
-
-
     }
 
 
@@ -186,6 +229,82 @@ public class MapController {
 
         String kakao = KAKAO_CLIENT_KEY;
 
+    }
+
+
+
+    @RequestMapping(value = "/map/naverImg", method = GET)
+    public void imgData(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException, SQLException {
+        dao = new MapDAO();
+        String clientId = NAVER_CLIENT_ID;
+        String clientSecret = NAVER_SECRET_KEY;
+
+        List<MapDTO> mapDao = dao.testData();
+
+        for (MapDTO mapDTO : mapDao) {
+            String text = URLEncoder.encode(mapDTO.getStName(), StandardCharsets.UTF_8);
+            int startNum = 1;
+
+            for (int i = 0; i <= 5; i++) {
+                String apiURL = "https://openapi.naver.com/v1/search/image.json?query=" + text + "&display=100&start=" + startNum;
+
+                Map<String, String> requestHeaders = new HashMap<>();
+                requestHeaders.put("X-Naver-Client-Id", clientId);
+                requestHeaders.put("X-Naver-Client-Secret", clientSecret);
+                String responseBody = get(apiURL, requestHeaders);
+
+                if (responseBody.isEmpty()) {
+                    System.err.println("Response body is null or empty for URL: " + apiURL);
+                    continue;
+                }
+
+                JSONObject jsonObject = new JSONObject(responseBody);
+
+                if (!jsonObject.has("items")) {
+                    System.err.println("No items found in the response for URL: " + apiURL);
+                    continue;
+                }
+
+                JSONArray items = jsonObject.getJSONArray("items");
+
+                List<StImgDTO> list = dao.selectImgData(mapDTO.getStId());
+
+                Set<StImgDTO> setDto = new TreeSet<>(list);
+
+                List<StImgDTO> dto = imgMethod(items, setDto, mapDTO.getStName());
+
+                System.out.println(mapDTO.getStName() + " : " + dto.size());
+
+                if (dto.isEmpty()) {
+                    continue;
+                }
+
+                dao.inputImg(dto, mapDTO.getStId());
+                startNum += 100;
+            }
+        }
+
+    }
+
+
+    private List<StImgDTO> imgMethod(JSONArray items, Set<StImgDTO> setDto, String storeName) {
+        List<StImgDTO> dto = new ArrayList<>();
+        for (int i = 0; i < items.length(); i++) {
+            JSONObject item = items.getJSONObject(i);
+            String title = unescapeHtml4(item.optString("title", "").replaceAll("<b>", "").replaceAll("</b>", ""));
+            if (title.isEmpty() || (!title.contains("홍대") && !title.contains(storeName))) {
+                continue;
+            }
+            StImgDTO imgDto = new StImgDTO();
+            imgDto.setImgTitle(title);
+            imgDto.setImgUrl(item.optString("link", ""));
+            imgDto.setThumbnail(item.optString("thumbnail", ""));
+            if (imgDto.getImgUrl().isEmpty() || imgDto.getThumbnail().isEmpty()) {
+                continue;
+            }
+            dto.add(imgDto);
+        }
+        return dto;
     }
 
 
